--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -20,6 +20,15 @@
             <div class="auth-page-content">
                 <div class="container">
                     <div class="row">
+                            <!-- Primary Alert -->
+                            {% if messages %}
+                            {% for message in messages %}
+                            <div class="alert alert-{{message.tags}} alert-solid" role="alert">
+                                {{message}}
+                            </div>
+                            {% endfor %}
+                            {% endif %}
+    
                         <div class="col-lg-12">
                             <div class="text-center mt-sm-5 mb-4 text-white-50">
                                 <div>
