--- a/templates/base_app.html
+++ b/templates/base_app.html
@@ -205,7 +205,7 @@
                     <button type="button" class="btn" id="page-header-user-dropdown" data-bs-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                         <span class="d-flex align-items-center">
-                            <img class="rounded-circle header-profile-user" src="{% static 'assets/images/users/avatar-1.jpg' %}"
+                            <img class="rounded-circle header-profile-user" src="{{ request.user.profile.photo.url }}"
                                 alt="Header Avatar">
                             <span class="text-start ms-xl-2">
                                 <span class="d-none d-xl-inline-block ms-1 fw-medium user-name-text">{% if request.user.get_full_name %}{{ request.user.get_full_name }}{% else %}{{ request.user.username }}{% endif %}</span>
@@ -216,7 +216,7 @@
                     <div class="dropdown-menu dropdown-menu-end">
                         <!-- item-->
                         <h6 class="dropdown-header">Welcome {{ request.user.username }}!</h6>
-                        <a class="dropdown-item" href="pages-profile.html"><i
+                        <a class="dropdown-item" href="{% url 'accounts:edit_profile_view' %}"><i
                                 class="mdi mdi-account-circle text-muted fs-16 align-middle me-1"></i> <span
                                 class="align-middle">Profile</span></a>
                         <div class="dropdown-divider"></div>
@@ -1189,7 +1189,16 @@
 
                 <div class="page-content">
                     <div class="container-fluid">
+                        <!-- Primary Alert -->
+                        {% if messages %}
+                        {% for message in messages %}
+                        <div class="alert alert-{{message.tags}} alert-solid" role="alert">
+                            {{message}}
+                        </div>
+                        {% endfor %}
+                        {% endif %}
 
+{% block content %}{% endblock content %}
                         <!-- start page title -->
                         {% comment %} <div class="row">
                             <div class="col-12">
