--- a/templates/base_app.html
+++ b/templates/base_app.html
@@ -38,7 +38,7 @@
             <div class="d-flex">
                 <!-- LOGO -->
                 <div class="navbar-brand-box horizontal-logo">
-                    <a href="index.html" class="logo logo-dark">
+                    <a href="/" class="logo logo-dark">
                         <span class="logo-sm">
                             <img src="{% static 'assets/images/logo-sm.png' %}" alt="" height="22">
                         </span>
@@ -47,7 +47,7 @@
                         </span>
                     </a>
 
-                    <a href="index.html" class="logo logo-light">
+                    <a href="/" class="logo logo-light">
                         <span class="logo-sm">
                             <img src="{% static 'assets/images/logo-sm.png' %}" alt="" height="22">
                         </span>
@@ -83,9 +83,9 @@
                             </div>
 
                             <div class="dropdown-item bg-transparent text-wrap">
-                                <a href="index.html" class="btn btn-soft-secondary btn-sm btn-rounded">how to setup <i
+                                <a href="/" class="btn btn-soft-secondary btn-sm btn-rounded">how to setup <i
                                         class="mdi mdi-magnify ms-1"></i></a>
-                                <a href="index.html" class="btn btn-soft-secondary btn-sm btn-rounded">buttons <i
+                                <a href="/" class="btn btn-soft-secondary btn-sm btn-rounded">buttons <i
                                         class="mdi mdi-magnify ms-1"></i></a>
                             </div>
                             <!-- item-->
@@ -234,7 +234,7 @@
                 <!-- LOGO -->
                 <div class="navbar-brand-box">
                     <!-- Dark Logo-->
-                    <a href="index.html" class="logo logo-dark">
+                    <a href="/" class="logo logo-dark">
                         <span class="logo-sm">
                             <img src="{% static 'assets/images/logo-sm.png' %}" alt="" height="22">
                         </span>
@@ -243,7 +243,7 @@
                         </span>
                     </a>
                     <!-- Light Logo-->
-                    <a href="index.html" class="logo logo-light">
+                    <a href="/" class="logo logo-light">
                         <span class="logo-sm">
                             <img src="{% static 'assets/images/logo-sm.png' %}" alt="" height="22">
                         </span>
@@ -280,7 +280,7 @@
                                             <a href="dashboard-crm.html" class="nav-link" data-key="t-crm"> CRM </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="index.html" class="nav-link" data-key="t-ecommerce"> Ecommerce </a>
+                                            <a href="/" class="nav-link" data-key="t-ecommerce"> Ecommerce </a>
                                         </li>
                                         <li class="nav-item">
                                             <a href="dashboard-crypto.html" class="nav-link" data-key="t-crypto"> Crypto </a>
