--- a/templates/home.html
+++ b/templates/home.html
@@ -207,6 +207,6 @@ Examoz Dashboard
 <!-- Sweet Alerts js -->
 <script src="{% static 'assets/libs/sweetalert2/sweetalert2.min.js' %}"></script>
 <script>
-    $('.form-check-input').attr(attributeName);
+    // $('.form-check-input').attr(attributeName);
 </script>
 {% endblock js_extra %}
