--- a/exams/templates/exams/exam_detail.html
+++ b/exams/templates/exams/exam_detail.html
@@ -6,7 +6,7 @@
         <h1>{{object.title}}</h1>
     </div>
     <div class="card-body">
-        <a href="/" class="card ribbon-box border shadow-none overflow-hidden">
+        <a href="{% url 'exams:exam_setting_update_view' object.pk %}" class="card ribbon-box border shadow-none overflow-hidden">
             <div class="card-body text-muted">
                 <div class="ribbon ribbon-info ribbon-shape trending-ribbon">
                     <span class="trending-ribbon-text">Settings</span> <i class=" ri-settings-3-fill text-white align-bottom float-end ms-1"></i>
