--- a/exams/templates/exams/question_form.html
+++ b/exams/templates/exams/question_form.html
@@ -4,7 +4,9 @@ Question{% endblock title %} {% block content %}
   <form method="post" id="question_form">
     {% csrf_token %}
     <div class="col-12" id="add_question"></div>
-    <button type="submit" class="btn btn-success col-4">Save</button>
+    <button type="submit" class="btn btn-success disabled col-4 submit-btn">
+      Save
+    </button>
   </form>
   <div class="col-12 m-4">
     <div class="bg-primary p-2 rounded text-white">
@@ -15,6 +17,14 @@ Question{% endblock title %} {% block content %}
 
 {% endblock content %} {% block js_extra %}
 <script>
+  const setButtonDisable = () => {
+    current_question_no = $(".card").length;
+    if (current_question_no < 1) {
+      $(".submit-btn").addClass("disabled");
+    } else {
+      $(".submit-btn").removeClass("disabled");
+    }
+  };
   $(document).ready(function () {
     var current_question_no = "";
     var option_no = "";
@@ -22,19 +32,27 @@ Question{% endblock title %} {% block content %}
       e.preventDefault();
       console.log($(this).serializeArray());
       var question_data = $(this).serializeArray();
-      $.ajax({
+      if (question_data.length > 1) {
+        $.ajax({
           type: "post",
           url: ".",
           data: question_data,
           success: function (response) {
-              alert('exam saved successfully')
-          }
-      });
+            alert("exam saved successfully");
+          },
+          error: function (response) {
+            alert("failed to save the questions");
+          },
+        });
+      } else {
+        alert("please add a question");
+      }
     });
 
     $("#id_question_type").change(function (e) {
       option_no = 5;
       current_question_no = $(".card").length;
+
       e.preventDefault();
       if (e.target.value == "Multiple Choices (choose one)") {
         current_question_no += 1;
@@ -47,7 +65,7 @@ Question{% endblock title %} {% block content %}
                         </div>
                         <div class="col-1">
                             <button class="btn btn-danger btn-sm text-white delete-card-btn">
-                                <i class="ri-close-line"></i>    
+                                <i class="ri-close-line"></i>
                             </button>
                         </div>
                     </div>
@@ -82,7 +100,7 @@ Question{% endblock title %} {% block content %}
                                         name="question_marks__question_${current_question_no}"
                                         min="0"
                                         class="numberinput form-control"
-                                        required=""
+                                        required
                                         id="id_question_marks__question_${current_question_no}"
                                     />
                                 </div>
@@ -95,11 +113,11 @@ Question{% endblock title %} {% block content %}
                                         <input class="form-check-input mt-2" checked type="radio" value="1" name="answer_for_${current_question_no}" id="option_1_for_${current_question_no}"/>
                                     </div>
                                     <div class="col-10">
-                                        <input type="text" class="form-control" name="option_value_1_for_${current_question_no}">
+                                        <input type="text" class="form-control" required name="option_value_1_for_${current_question_no}">
                                     </div>
                                     <div class="col-1">
                                         <button class="btn btn-danger btn-sm text-white delete-check-btn">
-                                            <i class="ri-close-line"></i>    
+                                            <i class="ri-close-line"></i>
                                         </button>
                                     </div>
                                 </div>
@@ -110,11 +128,11 @@ Question{% endblock title %} {% block content %}
                                         <input class="form-check-input mt-2" type="radio" value="2" name="answer_for_${current_question_no}" id="option_2_for_${current_question_no}"/>
                                     </div>
                                     <div class="col-10">
-                                        <input type="text" class="form-control" name="option_value_2_for_${current_question_no}">
+                                        <input type="text" class="form-control" required name="option_value_2_for_${current_question_no}">
                                     </div>
                                     <div class="col-1">
                                         <button class="btn btn-danger btn-sm text-white delete-check-btn">
-                                            <i class="ri-close-line"></i>    
+                                            <i class="ri-close-line"></i>
                                         </button>
                                     </div>
                                 </div>
@@ -125,11 +143,11 @@ Question{% endblock title %} {% block content %}
                                         <input class="form-check-input mt-2" type="radio" value="3" name="answer_for_${current_question_no}" id="option_3_for_${current_question_no}"/>
                                     </div>
                                     <div class="col-10">
-                                        <input type="text" class="form-control" name="option_value_3_for_${current_question_no}">
+                                        <input type="text" class="form-control" required name="option_value_3_for_${current_question_no}">
                                     </div>
                                     <div class="col-1">
                                         <button class="btn btn-danger btn-sm text-white delete-check-btn">
-                                            <i class="ri-close-line"></i>    
+                                            <i class="ri-close-line"></i>
                                         </button>
                                     </div>
                                 </div>
@@ -140,11 +158,11 @@ Question{% endblock title %} {% block content %}
                                         <input class="form-check-input mt-2" type="radio" value="4" name="answer_for_${current_question_no}" id="option_4_for_${current_question_no}"/>
                                     </div>
                                     <div class="col-10">
-                                        <input type="text" class="form-control" name="option_value_4_for_${current_question_no}">
+                                        <input type="text" class="form-control" required name="option_value_4_for_${current_question_no}">
                                     </div>
                                     <div class="col-1">
                                         <button class="btn btn-danger btn-sm text-white delete-check-btn">
-                                            <i class="ri-close-line"></i>    
+                                            <i class="ri-close-line"></i>
                                         </button>
                                     </div>
                                 </div>
@@ -156,6 +174,8 @@ Question{% endblock title %} {% block content %}
             </div>
 
             `);
+            
+        setButtonDisable();
       }
 
       e.target.value = "";
@@ -165,8 +185,9 @@ Question{% endblock title %} {% block content %}
       var eclass = e.target.getAttribute("class");
       //   console.log(eclass);
       if (eclass.includes("delete-card-btn")) {
-        let elementToRemove = e.target.closest(".card");
-        elementToRemove.remove();
+          let elementToRemove = e.target.closest(".card");
+          elementToRemove.remove();
+          setButtonDisable();
       }
       if (eclass.includes("delete-check-btn")) {
         let elementToRemove = e.target.closest(".form-check");
@@ -182,11 +203,11 @@ Question{% endblock title %} {% block content %}
                         <input class="form-check-input mt-2" type="radio" value="${option_no}" name="answer_for_${current_question_no}" id="answer_for_${current_question_no}"/>
                     </div>
                     <div class="col-10">
-                        <input type="text" class="form-control" name="option_value_${option_no}_for_${current_question_no}">
+                        <input type="text" class="form-control" required name="option_value_${option_no}_for_${current_question_no}">
                     </div>
                     <div class="col-1">
                         <button class="btn btn-danger btn-sm text-white delete-check-btn">
-                            <i class="ri-close-line"></i>    
+                            <i class="ri-close-line"></i>
                         </button>
                     </div>
                 </div>
