--- a/templates/base_app.html
+++ b/templates/base_app.html
@@ -1007,7 +1007,7 @@
                                             <a href="{% url 'exams:question_add_view' object.id %}" class="nav-link" data-key="t-list-js">Questions</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="#" class="nav-link" data-key="Publish-js">Publish</a>
+                                            <a href="{% url 'exams:publish_page' object.id %}" class="nav-link" data-key="Publish-js">Publish</a>
                                         </li>
                                         <li class="nav-item">
                                             <a href="#" class="nav-link" data-key="Result-js">Result</a>
