--- a/templates/base_app.html
+++ b/templates/base_app.html
@@ -1010,7 +1010,7 @@
                                             <a href="{% url 'exams:publish_page' object.id %}" class="nav-link" data-key="Publish-js">Publish</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="#" class="nav-link" data-key="Result-js">Result</a>
+                                            <a href="{% url 'exams:result_page' object.id %}" class="nav-link" data-key="Result-js">Result</a>
                                         </li>
                                     </ul>
                                 </div>
